2 methods at rotating array

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </button>
       </section>
     </div>
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
+    <script src="./script.js"></script>
   </body>
 </html>
