--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           id="rotateBy"
           aria-label="Rotate array by"
         >
-          <option value="1">One</option>
-          <option value="2" selected>Two</option>
+          <option value="1" selected>One</option>
+          <option value="2">Two</option>
           <option value="3">Three</option>
         </select>
       </div>
